--- a/index.html
+++ b/index.html
@@ -3,84 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat avec Solar Pro 3 (Free)</title>
+    <title>Interface Trinity AI</title>
     <style>
-        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; max-width: 800px; margin: 40px auto; padding: 20px; background-color: #f4f4f9; }
-        .container { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        #chat-window { height: 300px; border: 1px solid #ddd; overflow-y: auto; padding: 15px; margin-bottom: 15px; background: #fff; border-radius: 5px; }
-        .input-group { display: flex; gap: 10px; }
-        input[type="text"] { flex-grow: 1; padding: 10px; border: 1px solid #ddd; border-radius: 4px; }
-        button { padding: 10px 20px; background-color: #f36f21; color: white; border: none; border-radius: 4px; cursor: pointer; font-weight: bold; }
-        button:hover { background-color: #d65a1a; }
-        .user-msg { color: #333; margin-bottom: 10px; }
-        .ai-msg { color: #2c3e50; background: #ecf0f1; padding: 8px; border-radius: 5px; margin-bottom: 10px; }
-        .loading { color: #888; font-style: italic; }
+        :root { --primary: #6366f1; --bg: #0f172a; --text: #f8fafc; }
+        body { font-family: 'Segoe UI', sans-serif; background: var(--bg); color: var(--text); display: flex; justify-content: center; padding: 20px; }
+        .chat-container { width: 100%; max-width: 600px; background: #1e293b; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 25px rgba(0,0,0,0.3); }
+        #chat-box { height: 400px; overflow-y: auto; padding: 20px; border-bottom: 1px solid #334155; }
+        .message { margin-bottom: 15px; padding: 10px 15px; border-radius: 8px; line-height: 1.4; }
+        .user { background: var(--primary); align-self: flex-end; margin-left: 20%; }
+        .ai { background: #334155; margin-right: 20%; }
+        .input-area { display: flex; padding: 15px; gap: 10px; }
+        input { flex: 1; padding: 12px; border-radius: 6px; border: none; outline: none; background: #0f172a; color: white; }
+        button { background: var(--primary); color: white; border: none; padding: 10px 20px; border-radius: 6px; cursor: pointer; font-weight: bold; }
+        button:disabled { opacity: 0.5; cursor: not-allowed; }
+        .loader { font-size: 12px; color: #94a3b8; display: none; margin-top: 5px; }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <h2>Upstage Solar Pro 3</h2>
-    <div id="chat-window">
-        <div class="ai-msg">Bonjour ! Posez-moi une question via l'API Solar Pro 3.</div>
+<div class="chat-container">
+    <div id="chat-box">
+        <div class="message ai">Bonjour ! Je suis <strong>Trinity</strong>. Comment puis-je vous aider aujourd'hui ?</div>
     </div>
-
-    <div class="input-group">
-        <input type="text" id="user-input" placeholder="Écrivez votre message ici...">
-        <button onclick="askSolar()">Envoyer</button>
+    <div id="loading" class="loader" style="padding-left: 20px;">Trinity est en train de réfléchir...</div>
+    <div class="input-area">
+        <input type="text" id="user-input" placeholder="Posez votre question...">
+        <button id="send-btn">Envoyer</button>
     </div>
 </div>
 
 <script>
-    async function askSolar() {
-        const inputField = document.getElementById('user-input');
-        const chatWindow = document.getElementById('chat-window');
-        const userText = inputField.value.trim();
+    const API_KEY = "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";
+    const MODEL = "arcee-ai/trinity-large-preview:free";
 
-        if (!userText) return;
+    const chatBox = document.getElementById('chat-box');
+    const userInput = document.getElementById('user-input');
+    const sendBtn = document.getElementById('send-btn');
+    const loader = document.getElementById('loading');
 
-        // Afficher le message de l'utilisateur
-        chatWindow.innerHTML += `<div class="user-msg"><strong>Vous:</strong> ${userText}</div>`;
-        inputField.value = '';
-        
-        // Afficher un indicateur de chargement
-        const loadingId = "loading-" + Date.now();
-        chatWindow.innerHTML += `<div class="ai-msg loading" id="${loadingId}">Solar est en train de réfléchir...</div>`;
-        chatWindow.scrollTop = chatWindow.scrollHeight;
+    async function sendMessage() {
+        const text = userInput.value.trim();
+        if (!text) return;
+
+        // Ajouter le message utilisateur à l'écran
+        appendMessage('user', text);
+        userInput.value = '';
+        sendBtn.disabled = true;
+        loader.style.display = 'block';
 
         try {
             const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
                 method: "POST",
                 headers: {
-                    "Authorization": "Bearer VOTRE_CLE_API_OPENROUTER", // <--- METTEZ VOTRE CLÉ ICI
+                    "Authorization": `Bearer ${API_KEY}`,
                     "Content-Type": "application/json"
                 },
                 body: JSON.stringify({
-                    "model": "upstage/solar-pro-3:free",
-                    "messages": [
-                        { "role": "user", "content": userText }
-                    ]
+                    "model": MODEL,
+                    "messages": [{ "role": "user", "content": text }]
                 })
             });
 
             const data = await response.json();
-            const aiResponse = data.choices[0].message.content;
-
-            // Remplacer le chargement par la réponse réelle
-            document.getElementById(loadingId).classList.remove('loading');
-            document.getElementById(loadingId).innerHTML = `<strong>Solar Pro:</strong> ${aiResponse}`;
-
+            const aiReply = data.choices[0].message.content;
+            appendMessage('ai', aiReply);
         } catch (error) {
-            document.getElementById(loadingId).innerHTML = `<span style="color:red">Erreur : Impossible de contacter l'API.</span>`;
-            console.error("Erreur API:", error);
+            appendMessage('ai', "Erreur : Impossible de contacter l'API. Vérifiez votre connexion.");
+            console.error(error);
+        } finally {
+            sendBtn.disabled = false;
+            loader.style.display = 'none';
         }
-
-        chatWindow.scrollTop = chatWindow.scrollHeight;
     }
 
-    // Permettre d'envoyer avec la touche "Entrée"
-    document.getElementById('user-input').addEventListener('keypress', function (e) {
-        if (e.key === 'Enter') askSolar();
+    function appendMessage(role, text) {
+        const div = document.createElement('div');
+        div.className = `message ${role}`;
+        div.innerText = text;
+        chatBox.appendChild(div);
+        chatBox.scrollTop = chatBox.scrollHeight;
+    }
+
+    sendBtn.addEventListener('click', sendMessage);
+    userInput.addEventListener('keypress', (e) => {
+        if (e.key === 'Enter') sendMessage();
     });
 </script>
 
